# KAYA-FG

./: .gitignore  LICENSE  README.md  pyproject.toml
src/kyapi/: __init__.py  base.py  cam.py  fg.py  misc.py  stream.py
src/pykyfg/: __init__.py  args.py  model.py
